/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.shared.util.comm.testing;

option java_package = "com.google.devtools.mobileharness.shared.util.comm.testing.proto";
option java_outer_classname = "DummyServiceProto";

message DummyRequest {
  string name = 1;
}

message DummyResponse {
  string name = 1;
}

// Dummy service for testing.
service DummyService {
  // Dummy unary RPC
  rpc UnaryMethod(DummyRequest) returns (DummyResponse) {}

  // Dummy client streaming RPC
  rpc ClientStreamingMethod(stream DummyRequest) returns (DummyResponse) {}

  // Dummy server streaming RPC
  rpc ServerStreamingMethod(DummyRequest) returns (stream DummyResponse) {}

  // Dummy bidi streaming RPC
  rpc BidiStreamingMethod(stream DummyRequest) returns (stream DummyResponse) {}
}
